--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -77,3 +77,20 @@
 /simpledb/
 /simpledb/
 /simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
