finished lab5, fix LogTest system test bug

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -94,3 +94,24 @@
 /simpledb/
 /simpledb/
 /simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
