--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -115,3 +115,14 @@
 /simpledb/
 /simpledb/
 /simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
+/simpledb/
